# calcio

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: api.yml  crawler.yml  web.yml
apps/api/: Api.csproj  Calcio.sln  Program.cs  appsettings.Testing.json
apps/api/Api/: Api.csproj  Dockerfile  Program.cs  appsettings.Development.json  appsettings.json
apps/api/Api.Core/: Api.Core.csproj
apps/api/Api.Core.Tests/: Api.Core.Tests.csproj
apps/api/Api.IntegrationTests/: Api.IntegrationTests.csproj
apps/api/Controllers/: AgeGroupsController.cs  ClubsController.cs  (+5 more)
apps/crawler/: .gitignore  README.md  club_finder.py  crawler  db.py  fussball_scraper.py  match_finder.py  post_codes_full.csv  pyproject.toml  requirements.txt  ruff.toml  setup_dev.py
apps/crawler/data/: dresden.csv  fussball_de_expected.html  fussball_de_obfuscated.html  fussball_de_original.html  post_codes.csv  post_codes_full.csv
apps/crawler/src/fussball_crawler/: __init__.py  api_client.py  cli.py  club_finder.py  db.py  deobfuscator.py  logger.py  match_finder.py  scraper.py
apps/crawler/tests/: test_deobfuscator.py
apps/crawler/tests/data/files/: fussball_de_expected.html  fussball_de_original.html
apps/crawler/tests/data/fonts/: kury4yhl  sth8k5hs  v3glti02
apps/photon/: .gitignore  Dockerfile  README.md
apps/web/: .dockerignore  .editorconfig  Dockerfile  FILTER_URL_PARAMS.md  FilterPanel.example.tsx  README.md  env.d.ts  eslint.config.ts  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
(+133 files in other folders)
